2004-10-25  DindinX  <dindinx@gimp.org>

	* plug-ins/common/newsprint.c: removed debugging g_print and
	remove my memory fix, since it was buggy and shouldn't be done.
	My fix just broke this plug-in (reported by Joao S. O. Bueno
	Calligaris)

2004-10-25  Simon Budig  <simon@gimp.org>

	* app/tools/gimpvectortool.c: Switch to design mode when
	Escape gets pressed. Untabbified.

2004-10-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/gradient-editor-commands.c
	* app/display/gimpdisplayshell-preview.c: irrelevant coding style
	and spacing cleanups.

	* app/widgets/gimpimageeditor.c: removed utility function
	gimp_image_editor_context_changed() and connect
	gimp_image_editor_set_image() directly using
	g_signal_connect_swapped().

2004-10-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_circle.c
	* plug-ins/imagemap/imap_cmd_gimp_guides.c
	* plug-ins/imagemap/imap_cmd_guides.c
	* plug-ins/imagemap/imap_default_dialog.[ch]
	* plug-ins/imagemap/imap_edit_area_info.c
	* plug-ins/imagemap/imap_grid.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_misc.c
	* plug-ins/imagemap/imap_polygon.c
	* plug-ins/imagemap/imap_preferences.c
	* plug-ins/imagemap/imap_rectangle.c
	* plug-ins/imagemap/imap_selection.c
	* plug-ins/imagemap/imap_source.c
	* plug-ins/imagemap/imap_toolbar.c
	* plug-ins/imagemap/imap_tools.c: reviewed for HIG
	compliance. Various other minor fixes. Closes bug #150004.

2004-10-25 Kevin Cozens <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/scripts/test-sphere.scm: Added parameter
	missing from argument list.

2004-10-25  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/enumcode.pl
	* libgimp/Makefile.am: register all enums in libgimp/gimpenums.h
	with the type system.

	* libgimp/gimpenums.h: regenerated.

	* libgimp/gimp.def: updated.

2004-10-25  Sven Neumann  <sven@gimp.org>

	* configure.in: gimp_user_version should be 2.2.

	* libgimpmodule/Makefile.am (AM_CPPFLAGS): cleanup.

2004-10-25  Sven Neumann  <sven@gimp.org>
