@@ -30,11 +30,17 @@
         </menu>
         <xi:include href="dialogs-menuitems.xml" />
       </menu>
+
+<!-- FIXME solve this as param to xsltproc
+
       <menu action="debug-menu" name="Debug">
         <menuitem action="debug-mem-profile" />
         <menuitem action="debug-dump-items" />
         <menuitem action="debug-dump-managers" />
       </menu>
+
+-->
+
       <separator />
       <menuitem action="file-quit" />
     </menu>
